Added exploratory visualizations and form error helper function

--- a/pythonmodels/templates/pythonmodels/user_content/datasetView.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetView.html
@@ -7,19 +7,20 @@
 
 {% block pagecss %}
 
-    {# Other user css #}
+    {# Other user css#}
     <link rel="stylesheet" href="{% static 'pythonmodels/css/datasetView.css' %}">
 
 {% endblock %}
 
 {% block pagejs %}
 
-    {# Highcharts theme #}
+    {# Highcharts theme#}
     <script src="{% static 'pythonmodels/js/highchartsDarkTheme.js' %}"></script>
 
-    {# Other user js #}
+    {# Other user js#}
     <script src="{% static 'pythonmodels/js/datasetView.js' %}"></script>
     <script src="{% static 'pythonmodels/js/datasetViewModel.js' %}"></script>
+    <script src="{% static 'pythonmodels/js/datasetViewVis.js' %}"></script>
 
 {% endblock %}
 
