--- a/pythonmodels/templates/pythonmodels/user_content/datasetViewVis.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetViewVis.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="col-lg-3">
-        <form id="modelCreateForm" role="form" method="post">
+        <form id="visCreateForm" method="post">
             {% csrf_token %}
             <input name="vis" value="{{ object.pk }}" hidden>
 
 
             <div class="form-group">
                 <label for="xVar">Select variable</label>
-                <select multiple id="xVar" class="form-control" name="xVar">
+                <select id="xVar" class="form-control" name="xVar">
                     {% for var in object.datasetvariable_set.all %}
                         <option value="{{ var }}">{{ var }}</option>
                     {% endfor %}
@@ -23,22 +23,22 @@
                 </select>
             </div>
 
-            <button id="visPost" type="submit" class="btn btn-dark" disabled>
+            <button id="visPost" type="submit" class="btn btn-dark">
                 Create Chart <i id="fa-spinner"></i>
             </button>
 
         </form>
     </div>
 
-    {# Python exploratory charts #}
+    {# Python exploratory charts#}
     <div class="col-lg-9">
         <div id="exploreVis" class="container-fluid">
             <div class="row">
-                <div id="noOutputHeader" class="col-md-12 text-center">
-                    <h3>Under development</h3>
+                <div id="visNoOutputHeader" class="col-md-12 text-center">
+                    <h3>Click "Create Chart" button to show output</h3>
                 </div>
-                <div id="outputHeader" class=" col-md-12 text-center">
-                    {# Chart type header #}
+                <div id="visOutputHeader" class=" col-md-12 text-center">
+                    {# Chart type header#}
                 </div>
             </div>
             <br>
