--- a/pythonmodels/static/pythonmodels/css/datasetView.css
+++ b/pythonmodels/static/pythonmodels/css/datasetView.css
@@ -15,15 +15,20 @@
 .formErrorHighlight {
     box-shadow: 0px 0px 10px 10px #ac2925;
 }
-#createModelErrors {
+
+.formErrors {
     margin-top: 10px;
 }
 
-#noOutputHeader {
+#modelNoOutputHeader {
     margin-top: 150px;
 }
 
-#modelPlot, #corrMatrix {
+#visNoOutputHeader {
+    margin-top: 100px;
+}
+
+.plotMargin {
     margin-top: 25px;
     margin-bottom: 25px;
 }
