--- a/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-3">
-        <form id="modelCreateForm" role="form" method="post">
+        <form id="modelCreateForm" method="post">
             {% csrf_token %}
             <input name="model" value="{{ object.pk }}" hidden>
 
@@ -56,10 +56,10 @@
     <div class="col-lg-9">
         <div id="modelOutput" class="container-fluid">
             <div class="row">
-                <div id="noOutputHeader" class="col-md-12 text-center">
+                <div id="modelNoOutputHeader" class="col-md-12 text-center">
                     <h3>Click "Create Model" button to show output</h3>
                 </div>
-                <div id="outputHeader" class=" col-md-12 text-center">
+                <div id="modelOutputHeader" class=" col-md-12 text-center">
                     {# Model type header #}
                 </div>
             </div>
@@ -74,8 +74,8 @@
                 </div>
             </div>
             <div class="row">
-                <div id="modelPlot" class="col-md-6"></div>
-                <div id="corrMatrix" class="col-md-6"></div>
+                <div id="modelPlot" class="col-md-6 plotMargin"></div>
+                <div id="corrMatrix" class="col-md-6 plotMargin"></div>
             </div>
         </div>
     </div>
