Updated exploratory visualizations

--- a/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
@@ -46,7 +46,7 @@
             </div>
 
             <button id="modelPost" type="submit" class="btn btn-dark">
-                Create Model <i id="fa-spinner"></i>
+                Create Model <i class="createBtnSpin"></i>
             </button>
 
         </form>
