--- a/pythonmodels/templates/pythonmodels/user_content/datasetViewVis.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetViewVis.html
@@ -5,26 +5,26 @@
             <input name="vis" value="{{ object.pk }}" hidden>
 
 
-            <div class="form-group">
+            <div id="xVarGroup" class="form-group">
                 <label for="xVar">Select variable</label>
                 <select id="xVar" class="form-control" name="xVar">
-                    {% for var in object.datasetvariable_set.all %}
+                    {% for var in vars_non_empty %}
                         <option value="{{ var }}">{{ var }}</option>
                     {% endfor %}
                 </select>
             </div>
 
-            <div class="form-group">
-                <label for="yVar">Select variable 2</label>
-                <select id="yVar" class="form-control" name="yVar">
-                    {% for var in object.datasetvariable_set.all %}
-                        <option value="{{ var }}">{{ var }}</option>
-                    {% endfor %}
-                </select>
-            </div>
+{#            <div id="yVarGroup" class="form-group">#}
+{#                <label for="yVar">Select variable 2</label>#}
+{#                <select id="yVar" class="form-control" name="yVar">#}
+{#                    {% for var in vars_non_empty %}#}
+{#                        <option value="{{ var }}">{{ var }}</option>#}
+{#                    {% endfor %}#}
+{#                </select>#}
+{#            </div>#}
 
             <button id="visPost" type="submit" class="btn btn-dark">
-                Create Chart <i id="fa-spinner"></i>
+                Create Chart <i class="createBtnSpin"></i>
             </button>
 
         </form>
