--- a/pythonmodels/templates/pythonmodels/user_content/datasetView.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetView.html
@@ -14,7 +14,8 @@
 
 {% block pagejs %}
 
-    {# Highcharts theme#}
+    {# Highcharts js #}
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script src="{% static 'pythonmodels/js/highchartsDarkTheme.js' %}"></script>
 
     {# Other user js#}
@@ -55,7 +56,7 @@
 
                 <hr class="my-4">
 
-                <p class="lead font-weight-bold">Variable Info <i
+                <p class="lead font-weight-bold">Variable Summary <i
                         class="fa fa-spinner fa-pulse fa-fw varTableSpinner"></i></p>
 
                 {% include 'pythonmodels/user_content/datasetViewInfoTables.html' %}
