--- a/pythonmodels/templates/pythonmodels/landing_content/landing.html
+++ b/pythonmodels/templates/pythonmodels/landing_content/landing.html
@@ -23,13 +23,7 @@
 {% block content %}
 
     <div class="landing col-md-8 offset-md-2">
-        <div class="row">
-            <div class="text-center">
-                <h1 id="landingTitle">Supercharged Data Modeling and Visualization</h1>
-                <br>
-                <br>
-            </div>
-        </div>
+        <div id="landingTitle" class="text-center">Supercharged Data Modeling and Visualization</div>
         <div class="row">
             <div id="featureList" class="col-md-8 offset-md-2">
                 <p>QuickModel Features:</p>
